fix/44-Scrollbar-hide

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -69,3 +69,12 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
